--- a/switchui/styles.css
+++ b/switchui/styles.css
@@ -20,8 +20,8 @@ body {
 }
 
 .wrapper {
-  width: 1280px;
-  height: 720px;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   background-color: #ebebeb;
   color:  #282828;
